--- a/index.html
+++ b/index.html
@@ -4,36 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>César Olvera</title>
-  <link rel="stylesheet" href="style.css"> </head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-鷓੍ਹZHleO1lzw5X3YTfCsQvGfQHvCeCIlLiQvUD4r9FPq1z77zVCTUhzRMlCXNwPL0" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
-  <header>
-    <div class="container">
-      <h1><span>César Olvera </span></h1> <p class="tagline">[Your Tagline summarizing skills or career objective]</p>
+  <header class="container py-3">
+    <div class="d-flex flex-column align-items-center">
+      <h1><span>[Your Name]</span></h1>
+      <p class="tagline">[Your Tagline summarizing skills or career objective]</p>
     </div>
   </header>
 
-  <nav>
-    <ul>
-      <li><a href="#about">About Me</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#education">Education</a></li>
-      <li><a href="#contact">Contact</a></li>
+  <nav class="container py-2">
+    <ul class="nav nav-pills">
+      <li class="nav-item"><a href="#about" class="nav-link">About Me</a></li>
+      <li class="nav-item"><a href="#experience" class="nav-link">Experience</a></li>
+      <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+      <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+      <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
     </ul>
   </nav>
 
-  <main>
+  <main class="container py-4">
     <section id="about" class="content">
       <h2>About Me</h2>
       <p>[Write a concise and captivating bio highlighting your strengths, experience, and career goals]</p>
-      <button class="expand">Read More</button> <div class="hidden-content"> <p>[More details about yourself and your journey]</p>
+      <button class="btn btn-primary expand">Read More</button>
+      <div class="hidden-content">
+        <p>[More details about yourself and your journey]</p>
       </div>
     </section>
 
     <section id="experience" class="content">
       <h2>Experience</h2>
-      <ul class="experience-list">
-        <li>
+      <ul class="list-group experience-list">
+        <li class="list-group-item">
           <h3>[Job Title 1]</h3>
           <h4>[Company Name] - [Dates of Employment]</h4>
           <ul>
@@ -43,21 +48,24 @@
             <li>[Key Achievement 2]</li>
           </ul>
         </li>
-        <li> <h3>[Job Title 2]</h3>
+        <li class="list-group-item">
+          <h3>[Job Title 2]</h3>
           <h4>[Company Name] - [Dates of Employment]</h4>
           <ul>
-            </ul>
+          </ul>
         </li>
       </ul>
     </section>
 
     <section id="skills" class="content">
       <h2>Skills</h2>
-      <div class="skills-container">
-        <div class="skill">
+      <div class="skills-container row">
+        <div class="skill col-md-6">
           <h3>[Skill 1]</h3>
-          <div class="progress-bar" data-progress="[Progress Percentage]"></div> </div>
-        <div class="skill"> <h3>[Skill 2]</h3>
+          <div class="progress-bar" data-progress="[Progress Percentage]"></div>
+        </div>
+        <div class="skill col-md-6">
+          <h3>[Skill 2]</h3>
           <div class="progress-bar" data-progress="[Progress Percentage]"></div>
         </div>
       </div>
@@ -65,12 +73,13 @@
 
     <section id="education" class="content">
       <h2>Education & Certifications</h2>
-      <ul class="education-list">
-        <li>
+      <ul class="list-group education-list">
+        <li class="list-group-item">
           <h3>[Degree Name]</h3>
           <h4>[Institution Name] - [Years of Attendance]</h4>
         </li>
-        <li> <h3>[Certification Name]</h3>
+        <li class="list-group-item">
+          <h3>[Certification Name]</h3>
           <h4>[Issuing Institution] - [Year Obtained]</h4>
         </li>
       </ul>
@@ -78,12 +87,5 @@
 
     <section id="contact" class="content">
       <h2>Contact</h2>
-      <ul class="contact-info">
-        <li><a href="mailto:[Your Email]">[Your Email]</a></li>
-        <li><a href="[Your LinkedIn Profile URL]">LinkedIn</a></li>
-        </ul>
-    </section>
-  </main>
-
-  <script src="script.js"></script> </body>
-</html>
+      <ul class="contact-info list-group">
+        <li
