--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>César Olvera</title>
+  <title>César Iván Olvera Espinosa</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-鷓੍ਹZHleO1lzw5X3YTfCsQvGfQHvCeCIlLiQvUD4r9FPq1z77zVCTUhzRMlCXNwPL0" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="container py-3">
     <div class="d-flex flex-column align-items-center">
-      <h1><span>[Your Name]</span></h1>
-      <p class="tagline">[Your Tagline summarizing skills or career objective]</p>
+      <h1><span><b>César</b> Iván Olvera Espinosa</span></h1>
+      <p class="tagline">MSc. in Computer, Communications and Information Sciences</p>
     </div>
   </header>
 
   <nav class="container py-2">
     <ul class="nav nav-pills">
       <li class="nav-item"><a href="#about" class="nav-link">About Me</a></li>
-      <li class="nav-item"><a href="#experience" class="nav-link">Experience</a></li>
-      <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-      <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+      <li class="nav-item"><a href="#experience" class="nav-link">Education</a></li>
+      <li class="nav-item"><a href="#skills" class="nav-link">experience-list/a></li>
+      <li class="nav-item"><a href="#education" class="nav-link">Skills</a></li>
       <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
     </ul>
   </nav>
