--- a/index.html
+++ b/index.html
@@ -1,91 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>César Iván Olvera Espinosa</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-鷓੍ਹZHleO1lzw5X3YTfCsQvGfQHvCeCIlLiQvUD4r9FPq1z77zVCTUhzRMlCXNwPL0" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <title>Personal CV</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.4/dist/tailwind.min.css">
+  <script defer src="script.js"></script>
 </head>
-<body>
-  <header class="container py-3">
-    <div class="d-flex flex-column align-items-center">
-      <h1><span><b>César</b> Iván Olvera Espinosa</span></h1>
-      <p class="tagline">MSc. in Computer, Communications and Information Sciences</p>
-    </div>
+<body class="bg-white text-gray-900 dark:bg-gray-900 dark:text-gray-100 transition-colors duration-300">
+  <header id="landing" class="min-h-screen flex flex-col items-center justify-center text-center px-4">
+    <h1 id="name" class="text-4xl md:text-6xl font-bold mb-4"></h1>
+    <h2 id="title" class="text-xl md:text-2xl mb-4"></h2>
+    <p id="summary" class="max-w-xl"></p>
+    <button id="themeToggle" class="mt-6 border px-4 py-2 rounded">Toggle Theme</button>
   </header>
-
-  <nav class="container py-2">
-    <ul class="nav nav-pills">
-      <li class="nav-item"><a href="#about" class="nav-link">About Me</a></li>
-      <li class="nav-item"><a href="#experience" class="nav-link">Education</a></li>
-      <li class="nav-item"><a href="#skills" class="nav-link">experience-list/a></li>
-      <li class="nav-item"><a href="#education" class="nav-link">Skills</a></li>
-      <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
-    </ul>
-  </nav>
-
-  <main class="container py-4">
-    <section id="about" class="content">
-      <h2>About Me</h2>
-      <p>[Write a concise and captivating bio highlighting your strengths, experience, and career goals]</p>
-      <button class="btn btn-primary expand">Read More</button>
-      <div class="hidden-content">
-        <p>[More details about yourself and your journey]</p>
-      </div>
+  <main class="px-4 md:px-8 space-y-20 pb-20">
+    <section id="about">
+      <h3 class="text-2xl font-semibold mb-4">About Me</h3>
+      <p id="aboutContent" class="max-w-3xl"></p>
     </section>
-
-    <section id="experience" class="content">
-      <h2>Experience</h2>
-      <ul class="list-group experience-list">
-        <li class="list-group-item">
-          <h3>[Job Title 1]</h3>
-          <h4>[Company Name] - [Dates of Employment]</h4>
-          <ul>
-            <li>[Key Responsibility 1]</li>
-            <li>[Key Achievement 1]</li>
-            <li>[Key Responsibility 2]</li>
-            <li>[Key Achievement 2]</li>
-          </ul>
-        </li>
-        <li class="list-group-item">
-          <h3>[Job Title 2]</h3>
-          <h4>[Company Name] - [Dates of Employment]</h4>
-          <ul>
-          </ul>
-        </li>
-      </ul>
+    <section id="cv">
+      <h3 class="text-2xl font-semibold mb-4">CV / Experience</h3>
+      <div id="cvList" class="space-y-6"></div>
     </section>
-
-    <section id="skills" class="content">
-      <h2>Skills</h2>
-      <div class="skills-container row">
-        <div class="skill col-md-6">
-          <h3>[Skill 1]</h3>
-          <div class="progress-bar" data-progress="[Progress Percentage]"></div>
-        </div>
-        <div class="skill col-md-6">
-          <h3>[Skill 2]</h3>
-          <div class="progress-bar" data-progress="[Progress Percentage]"></div>
-        </div>
-      </div>
+    <section id="projects">
+      <h3 class="text-2xl font-semibold mb-4">Projects / Publications</h3>
+      <div id="projectsList" class="space-y-4"></div>
     </section>
-
-    <section id="education" class="content">
-      <h2>Education & Certifications</h2>
-      <ul class="list-group education-list">
-        <li class="list-group-item">
-          <h3>[Degree Name]</h3>
-          <h4>[Institution Name] - [Years of Attendance]</h4>
-        </li>
-        <li class="list-group-item">
-          <h3>[Certification Name]</h3>
-          <h4>[Issuing Institution] - [Year Obtained]</h4>
-        </li>
-      </ul>
+    <section id="skills">
+      <h3 class="text-2xl font-semibold mb-4">Skills</h3>
+      <ul id="skillsList" class="grid grid-cols-2 md:grid-cols-3 gap-2 max-w-3xl"></ul>
     </section>
-
-    <section id="contact" class="content">
-      <h2>Contact</h2>
-      <ul class="contact-info list-group">
-        <li
+    <section id="contact">
+      <h3 class="text-2xl font-semibold mb-4">Contact</h3>
+      <ul id="contactList" class="space-y-2"></ul>
+    </section>
+  </main>
+</body>
+</html>
