Create responsive academic website

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>César Olvera - Doctoral Researcher in Sustainable Cloud & AI Systems</title>
-  <meta name="description" content="César Olvera's academic CV and research portfolio in sustainable cloud computing and AI.">
+  <title>Contact - César Olvera</title>
+  <meta name="description" content="Contact information for César Olvera.">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.4/dist/tailwind.min.css" rel="stylesheet">
@@ -22,12 +22,14 @@
       <button id="theme-toggle" class="ml-4 border px-2 py-1 rounded">🌓</button>
     </div>
   </nav>
-  <header class="min-h-[calc(100vh-4rem)] flex flex-col items-center justify-center text-center px-4 fade-in">
-    <h1 class="text-4xl md:text-6xl font-bold mb-4">César Olvera</h1>
-    <p class="text-xl md:text-2xl mb-6">Doctoral Researcher in Sustainable Cloud & AI Systems</p>
-    <p class="max-w-2xl mb-8">Exploring energy-efficient cloud architectures and responsible AI to build sustainable digital infrastructure.</p>
-    <a href="projects.html" class="border px-4 py-2 rounded hover:bg-gray-100 dark:hover:bg-gray-800 transition">View My Work</a>
-  </header>
+  <main class="max-w-3xl mx-auto py-16 px-4 space-y-6 fade-in">
+    <h1 class="text-3xl font-bold mb-8">Get in Touch</h1>
+    <ul class="space-y-4">
+      <li>Email: <a href="mailto:cesar.olvera@example.com" class="text-blue-600 hover:underline">cesar.olvera@example.com</a></li>
+      <li>LinkedIn: <a href="https://www.linkedin.com/in/cesar-olvera" class="text-blue-600 hover:underline">linkedin.com/in/cesar-olvera</a></li>
+      <li>GitHub: <a href="https://github.com/cesarIOE97" class="text-blue-600 hover:underline">github.com/cesarIOE97</a></li>
+    </ul>
+  </main>
   <script src="assets/js/main.js"></script>
 </body>
 </html>
