--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
                         energy consumption optimization with €1.44M research funding.
                     </p>
                     <div class="hero-stats">
-                        <div class="stat">
+                        <!-- <div class="stat">
                             <div class="stat-number">Ph.D.</div>
                             <div class="stat-label">Student</div>
                         </div>
@@ -727,7 +727,7 @@
                         <div class="stat">
                             <div class="stat-number">2</div>
                             <div class="stat-label">Universities</div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="cta-buttons">
                         <a href="#about" class="btn btn-primary">Learn More</a>
