--- a/index.html
+++ b/index.html
@@ -780,14 +780,14 @@
                                         <span class="fact-icon">🔬</span>
                                         <span class="fact-text">Cloud & Network Computing Research Group</span>
                                     </div>
-                                    <div class="fact-item">
+                                    <!-- <div class="fact-item">
                                         <span class="fact-icon">💰</span>
                                         <span class="fact-text">€1.44M+ Academy of Finland Project Member</span>
                                     </div>
                                     <div class="fact-item">
                                         <span class="fact-icon">🌍</span>
                                         <span class="fact-text">ICT for Climate Actions Specialist</span>
-                                    </div>
+                                    </div> -->
                                     <div class="fact-item">
                                         <span class="fact-icon">🏆</span>
                                         <span class="fact-text">Finland Fellowship Grant Recipient (2024-2026)</span>
@@ -803,6 +803,7 @@
                                 <div class="tags" id="research-tags">
                                     <!-- Tags will be populated by JavaScript -->
                                 </div>
+                                <br>
                             </div>
                             <div id="languages-container"></div>
                         </div>
