--- a/index.html
+++ b/index.html
@@ -326,6 +326,58 @@
             align-items: center;
         }
 
+        .affiliation-tags {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.75rem;
+            margin: 1rem 0 2rem;
+        }
+
+        .affiliation-tag {
+            background: var(--primary-color);
+            color: white;
+            padding: 0.375rem 0.875rem;
+            border-radius: 20px;
+            font-size: 0.8rem;
+            font-weight: 500;
+        }
+
+        .quick-facts {
+            margin-top: 3rem;
+            padding: 2rem;
+            background: var(--surface-color);
+            border-radius: var(--border-radius);
+            border: 1px solid var(--border-light);
+        }
+
+        .quick-facts h3 {
+            color: var(--primary-color);
+            margin-bottom: 1.5rem;
+            font-size: 1.25rem;
+        }
+
+        .facts-grid {
+            display: grid;
+            gap: 1rem;
+        }
+
+        .fact-item {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+        }
+
+        .fact-icon {
+            font-size: 1.25rem;
+            width: 2rem;
+            text-align: center;
+        }
+
+        .fact-text {
+            font-size: 0.95rem;
+            line-height: 1.4;
+        }
+
         .profile-image {
             width: 300px;
             height: 300px;
