--- a/index.html
+++ b/index.html
@@ -816,9 +816,9 @@
                                 from Instituto Politécnico Nacional, México.
                             </p>
                             <p>
-                                I have been actively involved in research projects totaling <strong>€1.44 million in funding</strong> 
+                                <!-- I have been actively involved in research projects totaling <strong>€1.44 million in funding</strong> 
                                 and have contributed to advancing sustainable computing practices through innovative 
-                                algorithmic approaches and energy optimization techniques.
+                                algorithmic approaches and energy optimization techniques. -->
                             </p>
                             
                             <div class="quick-facts">
